unpackaged/main/default/objects/Pipeline__c/fields/Age_of_Current_Stage__c.field-meta.xml
<CustomField>
    <fullName>Age_of_Current_Stage__c</fullName>
    <formula>Today()- Last_Stage_Change_Date__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Age of Current Stage</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>