unpackaged/main/default/objects/Pipeline__c/fields/Company__c.field-meta.xml
<CustomField>
    <fullName>Company__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Created a new field as we have to convert the Company name field from master-detail to lookup and need to delete the old packaged field.</description>
    <label>Company</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Pipelines</relationshipLabel>
    <relationshipName>Pipelines</relationshipName>
    <type>Lookup</type>
</CustomField>