unpackaged/main/default/objects/Pipeline__c/fields/Deal_Description__c.field-meta.xml
<CustomField>
    <fullName>Deal_Description__c</fullName>
    <label>Deal Description</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>