unpackaged/main/default/objects/Pipeline__c/fields/Deal_Keywords__c.field-meta.xml
<CustomField>
    <fullName>Deal_Keywords__c</fullName>
    <label>Deal Keywords</label>
    <length>255</length>
    <type>Text</type>
</CustomField>