unpackaged/main/default/objects/Pipeline__c/fields/Deal_Lead__c.field-meta.xml
<CustomField>
    <fullName>Deal_Lead__c</fullName>
    <label>Deal Lead</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Deal Lead 1</fullName>
            </value>
            <value>
                <fullName>Deal Lead 2</fullName>
            </value>
            <value>
                <fullName>Deal Lead 3</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>