unpackaged/main/default/objects/Pipeline__c/fields/Deal_Quality_Score__c.field-meta.xml
<CustomField>
    <fullName>Deal_Quality_Score__c</fullName>
    <description>DO NOT USE</description>
    <label>Z_(Internal)_DQS</label>
    <precision>2</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>