unpackaged/main/default/objects/Pipeline__c/fields/Deal_Team_Members__c.field-meta.xml
<CustomField>
    <fullName>Deal_Team_Members__c</fullName>
    <label>Deal Team Members</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Team Member 1</fullName>
            </value>
            <value>
                <fullName>Team Member 2</fullName>
            </value>
            <value>
                <fullName>Team Member 3</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>