unpackaged/main/default/objects/Pipeline__c/fields/Deal_Type__c.field-meta.xml
<CustomField>
    <fullName>Deal_Type__c</fullName>
    <label>Deal Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Auction</fullName>
            </value>
            <value>
                <fullName>Proprietary</fullName>
            </value>
            <value>
                <fullName>Limited Auction</fullName>
            </value>
            <value>
                <fullName>Public to Private</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>