unpackaged/main/default/objects/Pipeline__c/fields/Diligence_Budget_USD__c.field-meta.xml
<CustomField>
    <fullName>Diligence_Budget_USD__c</fullName>
    <label>Diligence Budget</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>