unpackaged/main/default/objects/Pipeline__c/fields/Diligence_Expense_Actuals_USD__c.field-meta.xml
<CustomField>
    <fullName>Diligence_Expense_Actuals_USD__c</fullName>
    <label>Diligence Expense Actuals</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>