unpackaged/main/default/objects/Pipeline__c/fields/EBIT__c.field-meta.xml
<CustomField>
    <fullName>EBIT__c</fullName>
    <label>EBIT</label>
    <precision>17</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>