unpackaged/main/default/objects/Pipeline__c/fields/EBITDA__c.field-meta.xml
<CustomField>
    <fullName>EBITDA__c</fullName>
    <label>EBITDA</label>
    <precision>17</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>