unpackaged/main/default/objects/Pipeline__c/fields/EBITDA_Range_in_mn__c.field-meta.xml
<CustomField>
    <fullName>EBITDA_Range_in_mn__c</fullName>
    <description>Note for Admin- Please do not change these picklist values, since it may impact certain features of Navatar Deal Connect.</description>
    <inlineHelpText>Note for Admin- Please do not change these picklist values, since it may impact certain features of Navatar Deal Connect.</inlineHelpText>
    <label>EBITDA  Range (mn)</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>0 - 1</fullName>
            </value>
            <value>
                <fullName>1 - 2</fullName>
            </value>
            <value>
                <fullName>2 - 4</fullName>
            </value>
            <value>
                <fullName>4 - 6</fullName>
            </value>
            <value>
                <fullName>6 - 8</fullName>
            </value>
            <value>
                <fullName>8 - 10</fullName>
            </value>
            <value>
                <fullName>10 - 15</fullName>
            </value>
            <value>
                <fullName>15 - 20</fullName>
            </value>
            <value>
                <fullName>20 - 25</fullName>
            </value>
            <value>
                <fullName>25 - 30</fullName>
            </value>
            <value>
                <fullName>30 - 35</fullName>
            </value>
            <value>
                <fullName>35 - 40</fullName>
            </value>
            <value>
                <fullName>40 - 45</fullName>
            </value>
            <value>
                <fullName>45 - 50</fullName>
            </value>
            <value>
                <fullName>50 - 75</fullName>
            </value>
            <value>
                <fullName>75 - 100</fullName>
            </value>
            <value>
                <fullName>100 - 150</fullName>
            </value>
            <value>
                <fullName>150 - 200</fullName>
            </value>
            <value>
                <fullName>200 - 250</fullName>
            </value>
            <value>
                <fullName>250 - 500</fullName>
            </value>
            <value>
                <fullName>500 - 1000</fullName>
            </value>
            <value>
                <fullName>&gt; 1000</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>