unpackaged/main/default/objects/Pipeline__c/fields/EBITDA_Sales__c.field-meta.xml
<CustomField>
    <fullName>EBITDA_Sales__c</fullName>
    <formula>IF( Revenue__c = 0,0,EBITDA__c / Revenue__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>EBITDA / Sales</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>