unpackaged/main/default/objects/Pipeline__c/fields/Enterprise_Value__c.field-meta.xml
<CustomField>
    <fullName>Enterprise_Value__c</fullName>
    <label>Enterprise Value</label>
    <precision>17</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>