unpackaged/main/default/objects/Pipeline__c/fields/Exclusive_Process__c.field-meta.xml
<CustomField>
    <fullName>Exclusive_Process__c</fullName>
    <label>Exclusive Process</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>