unpackaged/main/default/objects/Pipeline__c/fields/Executive_Board_Members__c.field-meta.xml
<CustomField>
    <fullName>Executive_Board_Members__c</fullName>
    <label>Executive Board Members</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>None</fullName>
            </value>
            <value>
                <fullName>Board Member 1</fullName>
            </value>
            <value>
                <fullName>Board Member 2</fullName>
            </value>
            <value>
                <fullName>Board Member 3</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>