unpackaged/main/default/objects/Pipeline__c/fields/forDealQualityScore__c.field-meta.xml
<CustomField>
    <fullName>forDealQualityScore__c</fullName>
    <formula>Deal_Quality_Score__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Deal Quality Score</label>
    <precision>18</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>