unpackaged/main/default/objects/Pipeline__c/fields/Highest_Stage_Reached__c.field-meta.xml
<CustomField>
    <fullName>Highest_Stage_Reached__c</fullName>
    <label>Highest Stage Reached</label>
    <length>255</length>
    <type>Text</type>
</CustomField>