unpackaged/main/default/objects/Pipeline__c/fields/Import_Status__c.field-meta.xml
<CustomField>
    <fullName>Import_Status__c</fullName>
    <label>Import Status</label>
    <length>255</length>
    <type>Text</type>
</CustomField>