unpackaged/main/default/objects/Pipeline__c/fields/Investment_Size__c.field-meta.xml
<CustomField>
    <fullName>Investment_Size__c</fullName>
    <label>Investment Size</label>
    <precision>17</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>