unpackaged/main/default/objects/Pipeline__c/fields/LOI_Due_Date__c.field-meta.xml
<CustomField>
    <fullName>LOI_Due_Date__c</fullName>
    <label>LOI Due Date</label>
    <type>Date</type>
</CustomField>