unpackaged/main/default/objects/Pipeline__c/fields/Management_Affiliates__c.field-meta.xml
<CustomField>
    <fullName>Management_Affiliates__c</fullName>
    <label>Management Affiliates</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>None</fullName>
            </value>
            <value>
                <fullName>Affiliate 1</fullName>
            </value>
            <value>
                <fullName>Affiliate 2</fullName>
            </value>
            <value>
                <fullName>Affiliate 3</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>