unpackaged/main/default/objects/Pipeline__c/fields/Management_Assessment__c.field-meta.xml
<CustomField>
    <fullName>Management_Assessment__c</fullName>
    <label>Management Assessment</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>