unpackaged/main/default/objects/Pipeline__c/fields/Management_Meeting__c.field-meta.xml
<CustomField>
    <fullName>Management_Meeting__c</fullName>
    <label>Management Meeting</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
                <default>true</default>
                <label>No</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>