unpackaged/main/default/objects/Pipeline__c/fields/Management_Meeting_Date__c.field-meta.xml
<CustomField>
    <fullName>Management_Meeting_Date__c</fullName>
    <label>Management Meeting Date</label>
    <type>Date</type>
</CustomField>