unpackaged/main/default/objects/Pipeline__c/fields/Multiple__c.field-meta.xml
<CustomField>
    <fullName>Multiple__c</fullName>
    <label>Multiple</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>