unpackaged/main/default/objects/Pipeline__c/fields/NDA_Signed_Date__c.field-meta.xml
<CustomField>
    <fullName>NDA_Signed_Date__c</fullName>
    <label>NDA Signed Date</label>
    <type>Date</type>
</CustomField>