unpackaged/main/default/objects/Pipeline__c/fields/Our_Role__c.field-meta.xml
<CustomField>
    <fullName>Our_Role__c</fullName>
    <label>Our Role</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Lead</fullName>
            </value>
            <value>
                <fullName>Co-Lead</fullName>
            </value>
            <value>
                <fullName>Co-investment</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>