unpackaged/main/default/objects/Pipeline__c/fields/Pipeline_Comments__c.field-meta.xml
<CustomField>
    <fullName>Pipeline_Comments__c</fullName>
    <label>Pipeline Comments</label>
    <type>TextArea</type>
</CustomField>