unpackaged/main/default/objects/Pipeline__c/fields/Pipeline_Data_Currency__c.field-meta.xml
<CustomField>
    <fullName>Pipeline_Data_Currency__c</fullName>
    <label>Pipeline Data Currency</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>USD</fullName>
            </value>
            <value>
                <fullName>GBP</fullName>
            </value>
            <value>
                <fullName>EUR</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>