unpackaged/main/default/objects/Pipeline__c/fields/Pipeline_Data_Date__c.field-meta.xml
<CustomField>
    <fullName>Pipeline_Data_Date__c</fullName>
    <label>Pipeline Data Date</label>
    <type>Date</type>
</CustomField>