unpackaged/main/default/objects/Pipeline__c/fields/Platform_Company__c.field-meta.xml
<CustomField>
    <fullName>Platform_Company__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Platform Company</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Deals (Platform Company)</relationshipLabel>
    <relationshipName>Deals</relationshipName>
    <type>Lookup</type>
</CustomField>