unpackaged/main/default/objects/Pipeline__c/fields/Reason_to_Park__c.field-meta.xml
<CustomField>
    <fullName>Reason_to_Park__c</fullName>
    <label>Reason to Park</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Broken Deal</fullName>
            </value>
            <value>
                <fullName>Financial Distress</fullName>
            </value>
            <value>
                <fullName>Not Profitable Yet</fullName>
            </value>
            <value>
                <fullName>Prove Business Model</fullName>
            </value>
            <value>
                <fullName>Short-Term Issues</fullName>
            </value>
            <value>
                <fullName>Waiting to Scale</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>