unpackaged/main/default/objects/Pipeline__c/fields/Revenue_Range_in_mn__c.field-meta.xml
<CustomField>
    <fullName>Revenue_Range_in_mn__c</fullName>
    <description>Note for Admin- Please do not change these picklist values, since it may impact certain features of Navatar Deal Connect.</description>
    <inlineHelpText>Note for Admin- Please do not change these picklist values, since it may impact certain features of Navatar Deal Connect.</inlineHelpText>
    <label>Revenue Range (mn)</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>0 - 1</fullName>
            </value>
            <value>
                <fullName>1 - 2</fullName>
            </value>
            <value>
                <fullName>2 - 5</fullName>
            </value>
            <value>
                <fullName>5 - 10</fullName>
            </value>
            <value>
                <fullName>10 - 20</fullName>
            </value>
            <value>
                <fullName>20 - 30</fullName>
            </value>
            <value>
                <fullName>30 - 40</fullName>
            </value>
            <value>
                <fullName>40 - 50</fullName>
            </value>
            <value>
                <fullName>50 - 75</fullName>
            </value>
            <value>
                <fullName>75 - 100</fullName>
            </value>
            <value>
                <fullName>100 - 150</fullName>
            </value>
            <value>
                <fullName>150 - 200</fullName>
            </value>
            <value>
                <fullName>200 - 250</fullName>
            </value>
            <value>
                <fullName>250 - 500</fullName>
            </value>
            <value>
                <fullName>500 - 1000</fullName>
            </value>
            <value>
                <fullName>&gt; 1000</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>