unpackaged/main/default/objects/Pipeline__c/fields/Source__c.field-meta.xml
<CustomField>
    <fullName>Source__c</fullName>
    <label>Source</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Bank</fullName>
            </value>
            <value>
                <fullName>Vendor</fullName>
            </value>
            <value>
                <fullName>Broker</fullName>
            </value>
            <value>
                <fullName>Internal Relationship</fullName>
            </value>
            <value>
                <fullName>Internal Idea Generation</fullName>
            </value>
            <value>
                <fullName>Executive Board/Management Affiliate</fullName>
            </value>
            <value>
                <fullName>Other Financial Sponsor</fullName>
            </value>
            <value>
                <fullName>Navatar Deal Connect</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>