unpackaged/main/default/objects/Pipeline__c/fields/Source_Company__c.field-meta.xml
<CustomField>
    <fullName>Source_Company__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Source Firm</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Deals Sourced</relationshipLabel>
    <relationshipName>Pipeline_Source_Company</relationshipName>
    <type>Lookup</type>
</CustomField>