unpackaged/main/default/objects/Pipeline__c/fields/Source_Contact__c.field-meta.xml
<CustomField>
    <fullName>Source_Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Source Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Deals Sourced</relationshipLabel>
    <relationshipName>Pipelines</relationshipName>
    <type>Lookup</type>
</CustomField>