unpackaged/main/default/objects/Pipeline__c/fields/Sourcing__c.field-meta.xml
<CustomField>
    <fullName>Sourcing__c</fullName>
    <formula>IF(Source_Company__c =&quot;&quot;,(IF( Source_Contact__c =&quot;&quot;,&quot;In-House&quot;,&quot;Sourced&quot;)),&quot;Sourced&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Sourcing</label>
    <type>Text</type>
</CustomField>