unpackaged/main/default/objects/Pipeline__c/fields/Stage__c.field-meta.xml
<CustomField>
    <fullName>Stage__c</fullName>
    <label>Stage</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Deal Received</fullName>
            </value>
            <value>
                <fullName>NDA Signed</fullName>
            </value>
            <value>
                <fullName>Management Meeting</fullName>
            </value>
            <value>
                <fullName>IOI</fullName>
            </value>
            <value>
                <fullName>LOI</fullName>
            </value>
            <value>
                <fullName>Due Diligence</fullName>
            </value>
            <value>
                <fullName>Closed</fullName>
            </value>
            <value>
                <fullName>Declined/Dead</fullName>
            </value>
            <value>
                <fullName>Parked</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>