unpackaged/main/default/objects/Pipeline__c/fields/Transaction_Type__c.field-meta.xml
<CustomField>
    <fullName>Transaction_Type__c</fullName>
    <description>Note for Admin- Please do not change these picklist values, since it may impact certain features of Navatar Deal Connect.</description>
    <inlineHelpText>Note for Admin- Please do not change these picklist values, since it may impact certain features of Navatar Deal Connect.</inlineHelpText>
    <label>Transaction Type</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Buyout</fullName>
            </value>
            <value>
                <fullName>Debt Raise</fullName>
            </value>
            <value>
                <fullName>Equity Raise</fullName>
            </value>
            <value>
                <fullName>Leveraged Buyout</fullName>
            </value>
            <value>
                <fullName>Venture Capital</fullName>
            </value>
            <value>
                <fullName>Growth Capital</fullName>
            </value>
            <value>
                <fullName>Distressed Investment</fullName>
            </value>
            <value>
                <fullName>Mezzanine Capital</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>