unpackaged/main/default/objects/Pipeline__c/listViews/Deals_Needing_Attention.listView-meta.xml
<ListView>
    <fullName>Deals_Needing_Attention</fullName>
    <booleanFilter>1 AND 2 AND (3 OR 4)</booleanFilter>
    <columns>NAME</columns>
    <columns>Age_of_Current_Stage__c</columns>
    <columns>Revenue__c</columns>
    <columns>EBITDA__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Age_of_Current_Stage__c</field>
        <operation>greaterOrEqual</operation>
        <value>30</value>
    </filters>
    <filters>
        <field>Stage__c</field>
        <operation>equals</operation>
        <value>Serious Pursuit</value>
    </filters>
    <filters>
        <field>LAST_ACTIVITY</field>
        <operation>lessThan</operation>
        <value>LAST_N_DAYS:30</value>
    </filters>
    <filters>
        <field>LAST_ACTIVITY</field>
        <operation>equals</operation>
    </filters>
    <label>Deals Needing Attention</label>
</ListView>